--- a/PenaltyCalculations/PenaltyCalculations.csproj
+++ b/PenaltyCalculations/PenaltyCalculations.csproj
@@ -45,8 +45,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="DataProvider.cs" />
-    <Compile Include="Model\Reports\AccountReport.cs" />
-    <Compile Include="Model\Reports\IAccountReport.cs" />
+    <Compile Include="Model\Reports\IReport.cs" />
     <Compile Include="Model\Reports\IReportDebtPayment.cs" />
     <Compile Include="Model\DateNowAndValue.cs" />
     <Compile Include="Model\DateAndValue.cs" />
@@ -64,8 +63,8 @@
     <Compile Include="Model\BankRate.cs" />
     <Compile Include="Model\PenaltyRules.cs" />
     <Compile Include="Model\IPenaltyRules.cs" />
-    <Compile Include="Model\PersonalAccount.cs" />
-    <Compile Include="Model\IPersonalAccount.cs" />
+    <Compile Include="Model\PersonalAccountData.cs" />
+    <Compile Include="Model\IPersonalAccountData.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Model\Reports\ReportDebtPayment.cs" />
