--- a/PenaltyCalculations/PenaltyCalculations.csproj
+++ b/PenaltyCalculations/PenaltyCalculations.csproj
@@ -65,6 +65,7 @@
     <Compile Include="Model\IPenaltyRules.cs" />
     <Compile Include="Model\PersonalAccountData.cs" />
     <Compile Include="Model\IPersonalAccountData.cs" />
+    <Compile Include="Model\Reports\ReportInfo.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Model\Reports\ReportDebtPayment.cs" />
